# vsa-agent

./: .gitattributes  .gitignore  AGENTS.md  CONFIG.md  _models_tmp.py  config.yaml  config_live_dashscope.yaml  config_test.yaml  docker-compose.es.yml  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_clean.txt
.codex/: AGENTS.md
.codex/environments/: environment.toml
.superpowers/sdd/: frontend-quality-fixer-report.md  task-1-report.md  task-2-report.md  task-21-report.md  task-22-launcher-report.md  task-22-report.md  task-5-report.md  task-8_6-report.md  task-8_7-report.md  task-8_8-report.md  task-8_9-report.md
docs/: DEVELOPMENT_STATUS.md  es-ingest-runtime-validation.md  recorded-video-runtime.md
docs/learning/: INDEX.md  L01-config-registry.md  L02-data-models.md  L03-model-adapter.md  L04-search.md  L05-video-understanding.md  L06-agents.md  L07-video-analytics.md  L08-postprocessing.md  L09-api-embed.md  PROGRESS.md
scripts/: bootstrap_node.sh  es-dev-probe.ps1  es-dev-start.ps1  es-dev-stop.ps1  es-runtime-stack.ps1  es-runtime-stack.sh  es_ingest_smoke.py  install_original_ui_deps.sh  recorded-video-bootstrap-index.py  recorded-video-production-acceptance.py  recorded-video-validate.py  recorded-video-worker.py  run_live_acceptance_dashscope.sh  run_live_top_agent_video_dashscope.sh  run_original_ui_debug_stack.sh  run_original_ui_vss.sh  runtime-doctor.py  runtime-log-supervisor.py  smoke_original_ui_chat.sh  sync-server-files.ps1
src/: sitecustomize.py
src/vsa_agent/: main.py  (+6 more)
tests/: conftest.py
(+530 files in other folders)
