[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsa_agent"
version = "0.1.0"
description = "Video Safety Analysis Agent"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "fastapi>=0.121",
    "fastmcp>=2.0",
    "elasticsearch[async]>=8.14",
    "python-multipart>=0.0.22",
    "opencv-python-headless>=4.13",
    "pyyaml>=6.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.24",
    "ruff>=0.12",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
filterwarnings = ["ignore::DeprecationWarning"]
